--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
 <div class="jumbotron center">
 	<h1>Welcome to my app</h1>
-	<p>Click here to <%= link_to "Sign up", "#", class: "btn btn-primary" %></p>
+	<p><%= link_to "Log in", "#", class: "btn btn-default" %> <%= link_to "Sign up", "#", class: "btn btn-primary" %></p>
 </div>
